--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ PractiseCICT/.classpath
 PractiseCICT/.gitignore
 PractiseCICT/.project
 PractiseCICT/.settings/
-RemoteSystemsTempFiles/
+RemoteSystemsTempFiles//.DS_Store
